# ECE-472-Deep-Learning

./: .gitignore  justfile
HW/: justfile
HW/artifacts/: train.json
HW/artifacts/9.28_11pm/: train.json
HW/artifacts/deep_0.0005/: train.json
HW/hw01/src/hw01/: __init__.py
HW/hw02/: README.md  pyproject.toml
HW/hw02/src/hw02/: __init__.py  config.py  config.toml  data.py  model.py  plotting.py  training.py
HW/hw03/: pyproject.toml
HW/hw03/src/hw03/: __init__.py  config.py  data.py  log.json  model.py  plotting.py  training.py
HW/hw04/: README.md  pyproject.toml
HW/hw04/artifacts/cifar10/: train copy.json  train_cifar10.json
HW/hw04/artifacts/cifar100/: train_cifar100 copy.json  train_cifar100.json
HW/hw04/src/hw04/: __init__.py  config.py  data.py  logging.py  model.py  training.py
HW/hw05/: README.md  pyproject.toml
HW/hw05/artifacts/: test_result.json
HW/hw05/checkpoints/best_state_epoch_5/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
HW/hw05/checkpoints/best_state_epoch_5/ocdbt.process_0/: manifest.ocdbt
HW/hw05/checkpoints/state_epoch_5/: _CHECKPOINT_METADATA  manifest.ocdbt
HW/hw05/checkpoints/state_epoch_5/ocdbt.process_0/: manifest.ocdbt
HW/hw05/checkpoints/state_epoch_7/: _CHECKPOINT_METADATA  manifest.ocdbt
HW/hw05/checkpoints/state_epoch_7/array_metadatas/: process_0
HW/hw05/checkpoints/state_epoch_7/ocdbt.process_0/: manifest.ocdbt
HW/hw05/src/hw05/: __init__.py  config.py  data.py  logging.py  model.py  training.py
HW/hw06/: README.md  pyproject.toml
HW/hw06/artifacts/: log.json  log.txt
HW/hw06/src/hw06/: __init__.py  logging.py  model.py  test.py
hw01/: README.md  pyproject.toml
hw01/src/hw01/: config.py  config.toml  data.py  model.py  plotting.py  training.py
hw02/src/hw02/: config.py  config.toml  model.py  plotting.py
