# pyproject.toml.jinja

[project]
name = "hw02"
version = "0.1.0"
description = "spiral with MLP"
readme = "README.md"
authors = [
    { name = "wongee (freddy) hong", email = "wongee.hong@cooper.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "numpy",
    "pydantic-settings>=2.10.1",
    "matplotlib>=3.10.5",
    "tqdm>=4.67.1",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "flax>=0.11.2",
    "optax>=0.2.4",
    "scikit-learn>=1.5.0",
]


[project.scripts]
hw02 = "hw02:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
