# pyproject.toml.jinja

[project]
name = "hw06"
version = "0.1.0"
description = "Multi-head attention"
readme = "README.md"
authors = [
    { name = "wongee(freddy) hong", email = "wongee.hong@cooper.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "structlog",
    "numpy",
    "tensorflow",
    "tensorflow_datasets",
    "pydantic-settings",
    "matplotlib",
    "tqdm",
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "scikit-learn",
    "transformers",
    "datasets",
]

[project.scripts]
hw06 = "hw06:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
